Fix text in how-we-help area and add right padding to stop image covering text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ h2, p {
 }
 
 p {
-    color: #4C3319;
+    color: white;
 }
 
 #nav-menu, #logo, #paw {
@@ -77,7 +77,7 @@ p {
 
 #rehome-choices div {
     color: #fafafa;
-    background-color: orangered;
+    background-color: silver;
     width: 33.333%;
     height: 350px;
     float: left;
@@ -88,12 +88,12 @@ p {
 
 #help-info div {
     color: #fafafa;
-    background-color: silver;
+    background-color: #4C3319;
     width: 33.333%;
     height: 350px;
     float: left;
-    padding: 30px 0 0 30px;
-    text-align: center;
+    padding: 30px 10% 0 30px;
+    text-align: left;
     box-sizing: border-box;
 }
 
@@ -107,7 +107,7 @@ p {
 
 @keyframes cute-zoom {
     from {
-        transform: scale(1)
+        transform: scale(1.0)
     }
     to {
         transform: scale(1.1)
